--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -29,8 +29,8 @@
         </div>
     </form>
 
-    <a href="#">I forgot my password</a><br>
-    <a href="register.html" class="text-center">Register a new membership</a>
+    <a href="{{ path("fos_user_resetting_request") }}">I forgot my password</a><br>
+    <a href="{{ path("fos_user_registration_register") }}" class="text-center">Register a new membership</a>
 
 
 
