--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}Accueil{% endblock %} - Gestion des formations</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="{{ asset('css/bootstrap/bootstrap.css') }}">
+    {% stylesheets 'bootstrap/css/bootstrap*' filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="{{ asset('css/lte/AdminLTE.css') }}">
@@ -46,7 +48,7 @@ desired effect
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="{{ path('admin.home') }}" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>GF</b></span>
             <!-- logo for regular state and mobile devices -->
@@ -66,22 +68,28 @@ desired effect
                     <li class="dropdown user user-menu">
                         <!-- Menu Toggle Button -->
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <span class="hidden-xs">Florian</span>
+                            <span class="hidden-xs">{{ app.user.username }}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- The user image in the menu -->
                             <li class="user-header">
                                 <p>
-                                    Florian SIMON - Amdministrateur
+                                    Florian SIMON<br>
+                                    <small>{% spaceless %}
+                                        {% if "ROLE_ADMIN" in app.user.roles %}Administrateur
+                                        {% elseif "ROLE_RESP" in app.user.roles %}Responsable de formation
+                                        {% else %} Utilisateur
+                                        {% endif %}
+                                    {% endspaceless %}</small>
                                 </p>
                             </li>
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                    <a href="{{ path('fos_user_profile_show') }}" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                    <a href="{{ path('fos_user_security_logout') }}" class="btn btn-default btn-flat">D&eacute;connexion</a>
                                 </div>
                             </li>
                         </ul>
@@ -96,17 +104,21 @@ desired effect
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
 
+            {% set pageIds = page|split('.') %}
             <!-- Sidebar Menu -->
             <ul class="sidebar-menu">
-                <li class="header">HEADER</li>
-                <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-                <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
+                <li {% if (pageIds|length > 1 and pageIds.1 == 'formation') %}class="active"{% endif %}>
+                    <a href="#"><i class="fa fa-graduation-cap"></i> <span>Formations</span></a>
+                </li>
+                <li class="treeview{% if (pageIds|length > 1 and pageIds.1 == 'admin') %} active{% endif %}">
+                    <a href="#"><i class="fa fa-cog"></i> <span>Administration</span> <i class="fa fa-angle-left pull-right"></i></a>
                     <ul class="treeview-menu">
-                        <li><a href="#">Link in level 2</a></li>
-                        <li><a href="#">Link in level 2</a></li>
+                        <li {% if (pageIds|length > 2 and pageIds.2 == 'utilisateur') %}class="active"{% endif %}>
+                            <a href="#"><i class="fa fa-users"></i> Utilisateurs</a>
+                        </li>
+                        <li {% if (pageIds|length > 2 and pageIds.2 == 'type_formation') %}class="active"{% endif %}>
+                            <a href="#"><i class="fa fa-graduation-cap"></i> Type de formation</a>
+                        </li>
                     </ul>
                 </li>
             </ul><!-- /.sidebar-menu -->
@@ -138,9 +150,11 @@ desired effect
 <!-- REQUIRED JS SCRIPTS -->
 
 <!-- jQuery 2.1.4 -->
-<script src="{{ asset( 'js/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
+<script src="{{ asset( 'bootstrap/js/jquery.js') }}"></script>
 <!-- Bootstrap 3.3.5 -->
-<script src="{{ asset( 'js/bootstrap/bootstrap.js') }}"></script>
+{% javascripts 'bootstrap/js/bootstrap.js' %}
+    <script src="{{ asset_url }}"></script>
+{% endjavascripts %}
 <!-- AdminLTE App -->
 <script src="{{ asset( 'js/lte/app.js') }}"></script>
 
