--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html.twig' %}
 
+{% set page = "admin.home" %}
+
 {% block body %}
     <div id="wrapper">
         <div id="container">
