AJout du type de formation et début des formulaires

--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -120,7 +120,7 @@ desired effect
                             <a href="{{ path('admin.antenne') }}"><i class="fa fa-map-marker"></i></i> Antennes</a>
                         </li>
                         <li {% if (pageIds|length > 2 and pageIds.2 == 'type_formation') %}class="active"{% endif %}>
-                            <a href="#"><i class="fa fa-graduation-cap"></i> Type de formation</a>
+                            <a href="{{ path("admin.type") }}"><i class="fa fa-graduation-cap"></i> Type de formation</a>
                         </li>
                     </ul>
                 </li>
